Panning with NDOF device in Shader Editor changes colors in RGB node #105224

Closed
opened 2023-02-26 18:30:19 +01:00 by Yan Kansky · 12 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.56
NDOF Device: 3Dconnexion SpaceMouse Compact

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-20 08:50, hash: rBef9ca44dee7f
Worked: Never worked as expected, tested other versions

Short description of error
When there is an RGB node in Shader Editor, panning in the editor window with NDOF device and stumbling upon the Color/Value areas inside the RGB node with mouse cursor leads to changing the colors in the node. A the same time Undo History fills with many steps called "Unknown Action".
Same thing happens with Color node in Geometry Nodes editor window and RGB node in Compositor editor window.
I've tried Blender version 2.93.15 (hash: a7633d6b57da) and version: 2.82 (sub 7) (hash: rB77d23b0bd76f), but the results are the same. I searched everywhere in the settings, but I couldn't find a way to disable this behavior.
This looks like a bug, not like a feature, because you can do this by accident when you really don't want this to happen. And you can accidentally change the color of some important RGB node without noticing it, which will lead to unwanted changes in your file.

Please watch the attached videos:
RGB node in Shader Editor
Color node in Geometry Node Editor

Please check the Blender file if you have NDOF device:
Blender_3.4.1_ef9ca44dee7f_BugReport_NDOF_RGB_Node.blend

Exact steps for others to reproduce the error
Please use default settings of Blender and NDOF device.

  1. Please open the attached Blender file.
  2. Try to pan in the Shader Editor window on the right side with the NDOF device and stumble upon the Color/Value areas inside the RGB node.
  3. Check the Undo History.
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.56 NDOF Device: [3Dconnexion SpaceMouse Compact](https://3dconnexion.com/us/product/spacemouse-compact/) **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-20 08:50, hash: `rBef9ca44dee7f` Worked: Never worked as expected, tested other versions **Short description of error** When there is an RGB node in Shader Editor, panning in the editor window with NDOF device and stumbling upon the Color/Value areas inside the RGB node with mouse cursor leads to changing the colors in the node. A the same time Undo History fills with many steps called "Unknown Action". **Same thing happens with Color node in Geometry Nodes editor window and RGB node in Compositor editor window.** I've tried Blender version 2.93.15 (hash: `a7633d6b57da`) and version: 2.82 (sub 7) (hash: `rB77d23b0bd76f`), but the results are the same. I searched everywhere in the settings, but I couldn't find a way to disable this behavior. **This looks like a bug**, not like a feature, because you can do this by accident when you really don't want this to happen. And you can accidentally change the color of some important RGB node without noticing it, which will lead to unwanted changes in your file. Please watch the attached videos: [RGB node in Shader Editor](/attachments/02c3a3a2-bfb1-43dd-a36b-a9055f00640a) [Color node in Geometry Node Editor](/attachments/b9bc240d-5d3b-4f12-86fd-e9833dc426c2) Please check the Blender file if you have NDOF device: [Blender_3.4.1_ef9ca44dee7f_BugReport_NDOF_RGB_Node.blend](/attachments/9d67f6f4-8447-4709-8e97-9a5f47d945bf) **Exact steps for others to reproduce the error** Please use default settings of Blender and NDOF device. 1) Please open the attached Blender file. 2) Try to pan in the Shader Editor window on the right side with the NDOF device and stumble upon the Color/Value areas inside the RGB node. 3) Check the Undo History.
Yan Kansky added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-02-26 18:30:20 +01:00
Yan Kansky changed title from Panning with NDOF device inside Shader Editor to Panning with NDOF device in Shader Editor changes colors in RGB node 2023-02-26 18:31:35 +01:00
Iliya Katushenock added the
Interest
User Interface
Interest
Nodes & Physics
labels 2023-02-26 18:41:51 +01:00

I don't know if there is a hero who can check this report

I don't know if there is a hero who can check this report
Author

I don't know if there is a hero who can check this report

Do you mean there are very few NDOF devices users, so the priority of this bug is going to be very low?

> I don't know if there is a hero who can check this report Do you mean there are very few NDOF devices users, so the priority of this bug is going to be very low?

More likely
Although hope should not be lost

More likely Although hope should not be lost
Author

I see...
Well, I have hope! :D

I see... Well, I have hope! :D

I am not familiar with a 3Dconnexion Space Mouse.
If it really is a bug it's strange that it hasn't been reported before.

If I'm not mistaken, some developers that have a 3Dconnexion Space Mouse are:
@ideasman42, @HooglyBoogly and @Sergey

Could you guys confirm if it's a bug?

I am not familiar with a 3Dconnexion Space Mouse. If it really is a bug it's strange that it hasn't been reported before. If I'm not mistaken, some developers that have a 3Dconnexion Space Mouse are: @ideasman42, @HooglyBoogly and @Sergey Could you guys confirm if it's a bug?
Author

This feature becomes a bug only if you are panning inside the Shader Editor, Geometry Nodes and Compositor windows and stumble upon RGB or Color node. But if you open the color value in some node as a popup and use this feature on purpose, it's quite useful and handy. Please watch the attached video.

And in that case on the video changing colors doesn't mess up the Undo History. Every color change records there as single Undo action, as long as you didn't close the color selection popup. Instead of these Unknown Actions:
Unknown Actions
you get clean Undo History like this:
vlc_dd8ZNbBcPk.png

So the solution can be preventing color changing when you are panning the editors.

**This feature becomes a bug** only if you are panning inside the Shader Editor, Geometry Nodes and Compositor windows and stumble upon RGB or Color node. **But if you open the color value in some node as a popup and use this feature on purpose**, it's quite useful and handy. Please watch the attached [video](/attachments/b63ba774-9950-43ab-8afd-ef281cba6ae5). And in that case on the video changing colors doesn't mess up the Undo History. Every color change records there as single Undo action, as long as you didn't close the color selection popup. Instead of these Unknown Actions: ![Unknown Actions](/attachments/4c08ad29-f460-4646-8e62-ed16f4c83246) you get clean Undo History like this: ![vlc_dd8ZNbBcPk.png](/attachments/2934a347-db2b-4152-9cb5-fc3f8db6fcec) **So the solution can be preventing color changing when you are panning the editors.**

The NDOF device controlling color wheels is indeed something that happens here, but to me it seems more like a feature than a bug.

In the 3.6 the Undo history shows "value used for unconnected socket" or something between those lines. So worth checking this aspect in a newer Blender builds.

The NDOF device controlling color wheels is indeed something that happens here, but to me it seems more like a feature than a bug. In the 3.6 the Undo history shows "value used for unconnected socket" or something between those lines. So worth checking this aspect in a newer Blender builds.
Author

I've just tested it with Blender 3.6, and both problems still persist:

  1. The problem with navigating inside the Editor and accidentally stumbling upon RGB node and instantly changing the color of it, so the user can accidentally mess up the colors in such nodes
  2. The problem with Undo History.

I used version: 3.6.0 Alpha, branch: main, commit date: 2023-03-03 00:42, hash: 37c0b0b2b890
Please see the attached video.

I've just tested it with Blender 3.6, and both problems still persist: 1. The problem with navigating inside the Editor and accidentally stumbling upon RGB node and instantly changing the color of it, so the user can accidentally mess up the colors in such nodes 2. The problem with Undo History. I used version: 3.6.0 Alpha, branch: main, commit date: 2023-03-03 00:42, hash: `37c0b0b2b890` Please see the attached [video](/attachments/18a3b0db-0536-4499-ba90-405c444f918d).

Ah, there is a difference in the behavior of color sockets and color wheel without corresponding socket.

Indeed panning through RGB node which will all of a sudden modify the value is quite bad. And this is somrthing I can confirm here.

For the history entries: those are not dependent on the NDOF. If you use mouse to change the value it will create the same "Unknown Action" as NDOF. So this is more generic problem.

Ah, there is a difference in the behavior of color sockets and color wheel without corresponding socket. Indeed panning through RGB node which will all of a sudden modify the value is quite bad. And this is somrthing I can confirm here. For the history entries: those are not dependent on the NDOF. If you use mouse to change the value it will create the same "Unknown Action" as NDOF. So this is more generic problem.
Author

Indeed panning through RGB node which will all of a sudden modify the value is quite bad. And this is somrthing I can confirm here.

I agree! Can it be fixed?
The possible solution can be detecting the location of the mouse cursor at the moment when user starts using the NDOF device inside the Editor. If the cursor sits on these areas marked with red rectangles:
ImageGlass_3YUpdIx2xc.png
then the process of changing color in the node should begin. But if the cursor sits in any other place in the Editor, then the panning inside the Editor should begin instead, and if the cursor stumbles upon RGB or Color node in that case, Blender should ignore the color changing feature and the panning should continue instead.
What do you think about this solution? Is it possible to be implemented?

For the history entries: those are not dependent on the NDOF. If you use mouse to change the value it will create the same "Unknown Action" as NDOF. So this is more generic problem.

I didn't know about that.
Thank you!
I can confirm, changing colors with mouse cursor creates the same "Unknown Action" in Undo History too, but it creates just one step in History. And changing colors with NDOF device always creates almost two hundred of them instantly! Please see the attached video. First time I changed colors with mouse cursor, and second time with NDOF device.

EDIT: I'm sorry, I have accidentally closed the issue. Reopened it again.

> Indeed panning through RGB node which will all of a sudden modify the value is quite bad. And this is somrthing I can confirm here. I agree! Can it be fixed? The possible solution can be detecting the **location of the mouse cursor at the moment when user starts using the NDOF device inside the Editor**. If the cursor sits on these areas marked with red rectangles: ![ImageGlass_3YUpdIx2xc.png](/attachments/5808c819-9d70-4f24-96a2-4c057eddcebf) then the process of changing color in the node should begin. But if the cursor sits in any other place in the Editor, then the panning inside the Editor should begin instead, and if the cursor stumbles upon RGB or Color node in that case, Blender should ignore the color changing feature and the panning should continue instead. What do you think about this solution? Is it possible to be implemented? > For the history entries: those are not dependent on the NDOF. If you use mouse to change the value it will create the same "Unknown Action" as NDOF. So this is more generic problem. I didn't know about that. Thank you! I can confirm, changing colors with mouse cursor creates the same "Unknown Action" in Undo History too, but it creates **just one step** in History. And changing colors with NDOF device always creates almost two hundred of them instantly! Please see the attached [video](/attachments/4e09c94e-e748-491b-9adb-5e47770587da). First time I changed colors with mouse cursor, and second time with NDOF device. ### EDIT: I'm sorry, I have accidentally closed the issue. Reopened it again.
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2023-03-03 20:40:50 +01:00
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-03-03 20:40:57 +01:00
Member

Indeed panning through RGB node which will all of a sudden modify the value is quite bad. And this is somrthing I can confirm here

Will mark this as confirmed.

> Indeed panning through RGB node which will all of a sudden modify the value is quite bad. And this is somrthing I can confirm here Will mark this as confirmed.
Pratik Borhade added
Module
Platforms, Builds & Tests
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-03-10 07:53:18 +01:00
Author

Thank you very much, Pratik! 🙏

Thank you very much, Pratik! 🙏
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-16 07:21:08 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105224
No description provided.