Fix #105224: Node editor NDOF pan changes RGB colors

Disable NDOF changing colors for 2D views since it conflicts with
panning.